--- a/public/style.css
+++ b/public/style.css
@@ -73,6 +73,10 @@ div#splash-text {
   font-family: "Roboto", sans-serif;
 }
 
+#link-border {
+  width: 250px;
+}
+
 #extension-link-container {
   margin-top: 20px;
 }
@@ -80,19 +84,16 @@ div#splash-text {
 a#extension-link {
   color: gray;
   text-decoration: none;
-  /* border: 1px solid gray;
-  border-radius: 5px; */
   padding: 10px;
   font-size: 0.6em;
+  position: absolute;
+  left: 40%;
+  right: 40%;
+  padding-top: 25px;
 }
 
 a#extension-link:hover {
   color: white;
-  text-decoration: none;
-  /* border: 1px solid gray;
-  border-radius: 5px; */
-  padding: 10px;
-  font-size: 0.6em;
 }
 
 /*
