--- a/public/style.css
+++ b/public/style.css
@@ -150,7 +150,7 @@ a#extension-link:hover {
 
 #glances-gif {
   display: block;
-  width: 40%;
+  width: 300px;
   margin-top: 7%;
   margin-left: 15%;
   margin-bottom: 1%;
@@ -177,4 +177,11 @@ a#extension-link:hover {
 #about-text a:hover {
   color: white;
   /* text-decoration: none; */
+}
+
+#arrow {
+  height: 100px;
+  position: absolute;
+  margin-top: 5px;
+  transform: rotate(10deg);
 }
