--- a/public/style.css
+++ b/public/style.css
@@ -66,9 +66,18 @@ img.logo {
 div#splash-text {
   color: gray;
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1.6em;
   padding: 20px;
-  margin-top: 10%;
+  margin-top: 5%;
+  line-height: 2em;
+  font-family: "Roboto", sans-serif;
+}
+
+div#privacy-text {
+  color: gray;
+  text-align: center;
+  font-size: 1.6em;
+  padding: 20px;
   line-height: 2em;
   font-family: "Roboto", sans-serif;
 }
@@ -78,7 +87,7 @@ div#splash-text {
 }
 
 #extension-link-container {
-  margin-top: 20px;
+  margin-top: 5%;
 }
 
 a#extension-link {
@@ -169,11 +178,19 @@ a#extension-link:hover {
 
 #about-text {
   color: gray;
-  font-size: 1.25em;
+  font-size: 0.9em;
   width: 75%;
   margin: auto;
   margin-top: 5%;
   display: block;
+  text-align: left;
+  line-height: 1.5em;
+}
+
+img.squiggle {
+  margin: auto;
+  display: block;
+  width: 30%;
 }
 
 #credits {
@@ -181,7 +198,7 @@ a#extension-link:hover {
 }
 
 #about-text a {
-  color: lightgray;
+  color: gray;
   /* text-decoration: none; */
 }
 
