--- a/public/style.css
+++ b/public/style.css
@@ -10,14 +10,15 @@
 }
 
 html {
-  background-color: black;
+  /* background-color: black; */
   font-family: "Roboto", sans-serif;
-  color: #333;
+  color: black;
 }
 
 body {
   background-color: black;
   color: #c9c9c9;
+  /* color: white; */
   text-align: center;
   font-size: 18px;
   padding-top: 0px;
@@ -40,13 +41,24 @@ h3 {
   color: white;
 }
 
+::-moz-selection { /* Code for Firefox */
+  color: #ec5b8d;
+  background: white;
+}
+
+::selection {
+  color: #ec5b8d;
+  background: white;
+}
+
 /*
 ************ SPLASH PAGE ************ 
  */
-div#gallery {
+.container {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 90px;
+  padding-top: 7vh;
   display: block;
   width: 50%;
 }
@@ -54,7 +66,7 @@ div#gallery {
 img.logo {
   margin: auto;
   display: block;
-  width: 20%;
+  width: 25%;
   /* margin-top: 25px; */
   margin-bottom: 25px;
 }
@@ -62,7 +74,7 @@ img.logo {
 #reel {
   margin: auto;
   display: block;
-  width: 55%;
+  width: 66%;
   margin-top: 25px;
   margin-bottom: 25px;
 }
@@ -70,7 +82,8 @@ img.logo {
 #intro-text {
   margin-top: 50px;
   font-size: 28px;
-  line-height: 44px;
+  line-height: 36px;
+  font-style: italic;
 }
 
 #link-border {
@@ -84,18 +97,19 @@ img.logo {
 }
 
 a#extension-link {
-  color: #c9c9c9;
+  /* color: #c9c9c9;
   text-decoration: none;
-  /* padding: 10px; */
-  /* font-size: 0.6em; */
   position: absolute;
   left: 50%;
-  /* top: 50%; */
-  transform: translate(-50%, 175%);
+  transform: translate(-50%, 175%); */
 }
 
 a#extension-link:hover {
   color: white;
+}
+
+img {
+  max-width: 100%;
 }
 
 /*
@@ -106,12 +120,7 @@ a#extension-link:hover {
   text-align: center;
 }
 
-#splash-div {
-  padding-top: 7vh;
-}
-
-#about-text {
-  color: #c9c9c9;
+.copy {
   margin: auto;
   margin-top: 25px;
   display: block;
@@ -124,7 +133,11 @@ img.squiggle {
   width: 30%;
 }
 
-#about-text a {
+.section-break {
+  text-align: center;
+}
+
+a {
   color: #c9c9c9;
   /* text-decoration: none; */
 }
@@ -215,4 +228,12 @@ img.squiggle {
 
  .gallery-entry-name {
    margin: 15px;
+ }
+
+ .question {
+   font-weight: bold;
+ }
+
+ .qa {
+   margin: 25px 0;
  }
